fix(tabs): add z-index to underline so content does not overlap

--- a/src/components/tabs/styles/CdrTabs.scss
+++ b/src/components/tabs/styles/CdrTabs.scss
@@ -140,6 +140,7 @@
   }
 
   &__underline {
+    z-index: 1;
     position: absolute;
     width: 30px;
     margin: 0;
